[package]
name = "chymist"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/TriedWorks/chymist"
categories = ["mathematics", "science", "chemistry"]
keywords = ["math", "science", "chemistry", "physics"]
publish = true
description = "multipurpose chemistry library"

[lib]
name = "chymist"
path = "src/lib.rs"

[dependencies]
glucose = "0.2.2"
fructose = "0.3.4"